# bibliography

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  TODO.md  bib  enrichment-tracking.json  manifest.scm  pyproject.toml  tracking.json
bibmgr/: __init__.py  cli.py  db.py  fixers.py  index.py  models.py  query.py  report.py  repository.py  validators.py
books/: biology-neuroscience.bib  cs-architecture.bib  cs-databases.bib  cs-general.bib  cs-ml-ai.bib  cs-os.bib  cs-quantum.bib  ctp-landau-lifshitz.bib  design.bib  engineering.bib  environment.bib  math-analysis.bib  math-general.bib  math-geometry.bib  math-information-theory.bib  math-probability.bib  math-statistics.bib  philosophy.bib  phy-classical.bib  phy-electrodynamics.bib  phy-field-theory.bib  phy-general.bib  phy-mathematical.bib  phy-quantum.bib  phy-relativity.bib  phy-statistical.bib  phy-thermodynamics.bib  popular-science.bib  prog-algorithms.bib  prog-compilers.bib  prog-design.bib  prog-functional.bib  prog-general.bib  prog-languages.bib  prog-systems.bib  psychology.bib  science-fiction.bib  science-history.bib  self-help.bib  writing.bib
by-domain/: autoencoder.bib  award.bib  continual.bib  diffusion.bib  ebm.bib  flows.bib  gan.bib  generalization.bib  geometric.bib  gnn.bib  hopfield.bib  incontext.bib  infophyscomp.bib  information-theory.bib  information.bib  llm.bib  ml-theory.bib  moe.bib  neurosymbolic.bib  oscillation.bib  physics-computational.bib  quantumml.bib  rl.bib  sciml.bib  spnn.bib  ssm.bib  training.bib  transformers.bib  (+1 more)
(+754 files in other folders)
